# fractals

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
fractal_analysis/estimator/: holder_exponent_ir_estimator.py  hurst_estimator.py
fractal_analysis/simulator/: fbm_simulator.py
fractal_analysis/simulator/dpr/: dpr_fractal_simulator.py  dpr_multi_fractal_simulator.py
fractal_analysis/simulator/dprw/: dprw_fractal_simulator.py  dprw_multi_fractal_simulator.py
fractal_analysis/simulator/dpw/: dpw_fractal_simulator.py  dpw_multi_fractal_simulator.py
fractal_analysis/simulator/wood_chan/: wood_chan_fractal_simulator.py  wood_chan_multi_fractal_simulator.py
fractal_analysis/tester/: critical_surface.py  estimate_sigma.py  series_tester.py
fractals/tester/: series_tester.py
test/test_estimator/: test_holder_exponent_ir_estimater.py  test_hurst_estimater.py
test/test_simulator/: test_dpr_fractal_simulator.py  test_dpr_multi_fractal_simulator.py  test_dprw_fractal_simulator.py  test_dprw_multi_fractal_simulator.py  test_dpw_fractal_simulator.py  test_dpw_multi_fractal_simulator.py  test_fbm_simulator.py  test_wood_chan_fractal_simulator.py  test_wood_chan_multi_fractal_simulator.py
test/test_tester/: test_critical_surface.py  test_estimate_sigma.py  test_series_tester.py
tester/test/: test_estimate_sigma.py  test_series_tester.py
