[tool.poetry]
name = "fractal-analysis"
version = "0.2.0"
description = ""
authors = ["yujiading <yujia.ding@cgu.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yujiading/fractals"
repository = "https://github.com/yujiading/fractals"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.0"
scipy = "^1.8.0"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
tqdm = "^4.66.4"


[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
