[tool.poetry]
name = "fractal-analysis"
version = "0.3.1"
description = ""
authors = ["yujiading <yujia.ding@cgu.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yujiading/fractals"
repository = "https://github.com/yujiading/fractals"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.13"
pandas = "^2.2.3"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
notebook = "^7.3.3"
mpmath = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
